--- a/modules/control-center-web/src/main/js/views/configuration/sidebar.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/sidebar.jade
@@ -26,7 +26,7 @@ mixin sidebar-item(ref, num, txt)
 
 block container
     .row
-        .col-sm-2.border-right.section-left.greedy
+        .col-xs-3.col-sm-3.col-md-2.border-right.section-left.greedy
             .sidebar-nav(bs-affix)
                 ul.menu(ng-controller='activeLink')
                     +sidebar-item('/configuration/clusters', 1, 'Clusters')
@@ -34,6 +34,6 @@ block container
                     +sidebar-item('/configuration/caches', 3, 'Caches')
                     +sidebar-item('/configuration/summary', 4, 'Summary')
 
-        .col-sm-10.border-left.section-right
+        .col-xs-9.col-sm-9.col-md-10.border-left.section-right
             .docs-content
                 block content
