--- a/modules/control-center-web/src/main/js/views/configuration/summary.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/summary.jade
@@ -64,9 +64,9 @@ block content
                                 div(ui-ace='{ onLoad: aceInit, mode: "xml" }' ng-model='xmlServer')
                             div(title='<img src="/images/java.png" width="16px" height="16px"/> Java' bs-pane)
                                 .details-row
-                                    .col-xs-2.col-sm-1
+                                    .col-xs-2.col-sm-2.col-md-1
                                         label Generate:
-                                    .col-xs-4.col-sm-3
+                                    .col-xs-4.col-sm-3.col-md-3
                                         button.form-control(type='button' ng-model='configServer.javaClassServer'  bs-select data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in javaClassItems' data-sort='false')
                                 div(ui-ace='{ onLoad: aceInit, mode: "java" }' ng-model='javaServer')
                             div(title='<img src="/images/docker.png" width="16px" height="16px"/> Dockerfile' bs-pane)
@@ -103,8 +103,8 @@ block content
                                     div(ui-ace='{ onLoad: aceInit, mode: "xml" }' ng-model='xmlClient')
                                 div(title='<img src="/images/java.png" width="16px" height="16px"/> Java' bs-pane)
                                     .details-row
-                                        .col-xs-2.col-sm-1
+                                        .col-xs-2.col-sm-2.col-md-1
                                             label Generate:
-                                        .col-xs-5.col-sm-4
+                                        .col-xs-4.col-sm-3.col-md-3
                                             button.form-control(type='button' ng-model='backupItem.javaClassClient' bs-select data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in javaClassItems' data-sort='false')
                                     div(ui-ace='{ onLoad: aceInit, mode: "java" }' ng-model='javaClient')
