IGNITE-843 Minor tweak for borders.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -876,9 +876,12 @@ button .caret, .btn .caret {
     top: -10px;
     margin-left: 10px;
     margin-right: 10px;
-    background: white;
     overflow: visible;
     position: relative;
+
+    label {
+        background: white;
+    }
 }
 
 .legend-btn {
