IGNITE-843 WIP Modal for metadata load.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -580,7 +580,8 @@ a:hover, .link:hover .title {
 }
 
 .modal-body {
-    padding-top: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 h1.ignite-logo {
@@ -890,7 +891,7 @@ button .caret, .btn .caret {
 }
 
 .fieldset-content {
-    margin: 0 10px 5px 10px;
+    margin: 0 10px 10px 10px;
 }
 
 .tooltip.right .tooltip-arrow {
