--- a/modules/control-center-web/src/main/js/views/configuration/clusters.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/clusters.jade
@@ -42,7 +42,7 @@ block content
             i.tipLabel.fa.fa-question-circle(bs-tooltip data-title='{{joinTip(templateTip)}}' type='button')
         hr
         form.form-horizontal(name='inputForm' ng-if='backupItem' novalidate)
-            div(bs-collapse data-start-collapsed='false')
+            .panel-group(bs-collapse ng-model='panels.activePanels' data-allow-multiple='true' ng-click='triggerDigest = true')
                 .panel.panel-default
                     .panel-heading
                         h3
@@ -51,11 +51,10 @@ block content
                         .panel-body
                             .settings-row(ng-repeat='field in general')
                                 +form-row('backupItem')
-            div(ng-show='ui.expanded')
-                .advanced-options
-                    i.fa.fa-chevron-circle-up(ng-click='toggleExpanded()')
-                    a(ng-click='toggleExpanded()') {{ui.expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
-                .panel-group(bs-collapse data-allow-multiple='true' data-start-collapsed='true')
+                div(ng-show='ui.expanded')
+                    .advanced-options
+                        i.fa.fa-chevron-circle-up(ng-click='toggleExpanded()')
+                        a(ng-click='toggleExpanded()') {{ui.expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
                     .panel.panel-default(ng-repeat='group in advanced')
                         .panel-heading
                             h3
