--- a/modules/control-center-web/src/main/js/views/configuration/caches.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/caches.jade
@@ -39,7 +39,7 @@ block content
             button.btn.btn-primary(event-focus='defaultFocusId' ng-click='createItem()') Add cache
         hr
         form.form-horizontal(name='inputForm' ng-if='backupItem' novalidate)
-            .panel-group(bs-collapse ng-model='panels.activePanels' data-allow-multiple='true' ng-click='triggerDigest = true')
+            .panel-group(bs-collapse ng-model='panels.activePanels' data-allow-multiple='true')
                 .panel.panel-default
                     .panel-heading
                         h3
